--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.2",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
     "daisyui": "^4.7.2",
