--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.2.2",
     "@heroicons/react": "^2.1.1",
+    "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.7",
     "daisyui": "^4.7.2",
     "react": "^18.2.0",
