--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.7",
     "daisyui": "^4.7.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
