--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-share": "^5.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
