--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-share": "^5.1.0",
+    "uuid": "^10.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
